# data-getta

./: .gitignore  .keep-alive  .pre-commit-config.yaml  README.md  downloaded_files.txt  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: auto-merge-leep-alive.yml  ci-pipeline.yml  keep-alive.yml  pre-commit.yml  pull_trackman.yml  supabase-keep-alive.yml
ise/: batter_scores.csv  pitch_scores.csv
scripts/: .flake8  .pre-commit-config.yaml  Makefile  README.md  process_all_data.py  pull_all_trackman_csv.py  pyproject.toml  update_advanced_batter_table.py  update_batted_balls_table.py  update_batters_table.py  update_pitch_bins_table.py
scripts/QA/: process_local_csv.py
scripts/QA/test_csv_files/: test_data.csv
scripts/advanced_stats/: average_EV.py
scripts/need-to-be-checked/: update_batter_pitch_bins_table.py  update_pitcher_pitch_bins_table.py
scripts/tests/: conftest.py  test_advanced_batting_stats_upload.py  test_advanced_pitching_stats_upload.py  test_basic.py  test_batter_pitch_bins_upload.py  test_batter_stats.py  test_common.py  test_file_date.py  test_pitch_bins.py  test_pitch_counts_upload.py  test_pitcher_pitch_bins_upload.py  test_pitcher_stats.py  test_pitcher_stats_upload.py  test_pitches_and_players.py  test_players_upload.py  test_update_advanced_batting_table.py  test_update_advanced_pitching_table.py  test_update_batter_pitch_bins_table.py  test_update_batters_table.py  test_update_pitcher_pitch_bins_table.py  test_update_pitchers_table.py  test_update_pitches_table.py  test_update_players_table.py
scripts/utils/: __init__.py  advanced_batting_stats_upload.py  advanced_pitching_stats_upload.py  batter_pitch_bins_upload.py  batter_stats_upload.py  common.py  file_date.py  pitch_counts_upload.py  pitcher_pitch_bins_upload.py  pitcher_stats_upload.py  players_upload.py  test_pitcher_stats.py  update_advanced_batting_table.py  update_advanced_pitching_table.py  update_batter_pitch_bins_table.py  update_batters_table.py  update_pitcher_pitch_bins_table.py  update_pitchers_table.py  update_pitches_table.py  update_players_table.py  update_trackman_table.py
scripts/utils/models/: xBA_grid.csv  xSLG_model.json  xwOBA_model.json
training_models/: train_xba_model.py
training_models/models/: scaler.save  xba_model_20250909_040802.pt  xba_model_20250910_025605.pt
ui/: README.md  index.css  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
ui/public/: 404.html
ui/src/: App.tsx  main.tsx
ui/src/components/: AuthForm.tsx  CacheRefreshButton.tsx  ConferenceTable.tsx  DesktopSideBar.tsx  LoginForm.tsx  MobileSideBar.tsx  ResetPasswordForm.tsx  SeasonDateRangeSelect.tsx  SideBar.tsx  TabGroup.tsx  Tabs.tsx  TopBar.tsx
ui/src/hooks/: AuthContext.ts  AuthProvider.tsx
ui/src/layouts/: AppLayout.tsx  AuthLayout.tsx  MainLayout.tsx
ui/src/lib/: config.ts  supabaseClient.ts
ui/src/pages/: BatterTab.tsx  BattingTab.tsx  ConferencePage.tsx  LandingPage.tsx  LoginPage.tsx  PitcherTab.tsx  PitchingTab.tsx  PlayerPage.tsx  ResetPasswordPage.tsx  RosterTab.tsx  TeamPage.tsx  TeamPerformancePage.tsx
ui/src/router/: routes.tsx
ui/src/services/: authService.ts  playerService.ts  seasonService.ts  teamPerformanceService.ts  (+1 more)
(+125 files in other folders)
