[tool.poetry]
name = "data-getta"
version = "0.0.0"
description = ""
authors = ["data-getta <noreply@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "2.3.3"
pandas = "2.3.2"
python-dotenv = "1.1.1"
supabase = "2.18.1"

[build-system]
requires = ["poetry-core>=2.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
allow_untyped_defs = true
allow_incomplete_defs = true
no_implicit_optional = false

# Disable specific strict checks
warn_redundant_casts = false
warn_unused_ignores = false
check_untyped_defs = false
